--- a/index.html
+++ b/index.html
@@ -43,10 +43,16 @@
   </head>
 
   <body class="bg-dark">
-      <div class="text-center">
-        <img src="thead.png.crdownload" class="head-image"/>
+    <br>
+      <div class="text-center text-white mt-5 display-3">
+        <!-- <img src="thead.png.crdownload" class="head-image"/> -->
+
+        <!-- T̸̫͎͓̱̭͈̟̯̘͔̐̒̽̾̑̔̉̃͋̓H̶̨̬̯̼͓̺̭̥̲̮̓͋̄͠Ị̶͇͎͚̩͋͘͜ͅR̴̺̘̼̰͒̂̈͆͘Ṳ̷̼̊͐͊̓͜͝K̷̨͔̟̠̙͉̻̤̽̿̋̋͌͗͘͘Ử̴̜͓̲͖̝̉́̓̂Ṛ̸̡̻̗̹̗̞͑̂̎ͅͅĄ̷̨̼͍̪̬͓͚̜͎̏̿̊́L̵̡̛̛͌̇̿͑͘͝
+
+       -->
+        ᖶᕼᓰᖇᑘᖽᐸᑘᖇᗩᒪ
       </div>
-        
+        <br>
         <div class="container">
           <div id="first" class="row m-5">
           <!-- The form -->
