--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <body class="bg-dark">
     <br>
-      <div class="text-center text-white mt-5 display-3">
+      <div class="text-center text-white mt-5 title">
         <!-- <img src="thead.png.crdownload" class="head-image"/> -->
 
         <!-- T̸̫͎͓̱̭͈̟̯̘͔̐̒̽̾̑̔̉̃͋̓H̶̨̬̯̼͓̺̭̥̲̮̓͋̄͠Ị̶͇͎͚̩͋͘͜ͅR̴̺̘̼̰͒̂̈͆͘Ṳ̷̼̊͐͊̓͜͝K̷̨͔̟̠̙͉̻̤̽̿̋̋͌͗͘͘Ử̴̜͓̲͖̝̉́̓̂Ṛ̸̡̻̗̹̗̞͑̂̎ͅͅĄ̷̨̼͍̪̬͓͚̜͎̏̿̊́L̵̡̛̛͌̇̿͑͘͝
