--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
         
         <div class="container">
-          <div id="first" class="row mt-5 mb-5">
+          <div id="first" class="row mt-5 mb-5 ml-2 mr-2">
           <!-- The form -->
             
            <div class="">
