--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
             <input type="text" placeholder="kural ( 1 to 1330)" id="searchbar">
             <button type="button" onclick="search()" class="btn searchbtn"><i class="fa fa-search"></i></button>
            </div>
+           <br>
+           <div class="error">
+
+           </div>
           
           </div>
         </div>
