--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
   </head>
 
   <body class="bg-dark">
+
+    <div id="confirm">
+      <br>
+      <div class="font-weight-bold text-center">ERROR:</div>
+      <div class="message">This is a warning message.</div>
+      <div class="text-center">
+        <button class="yes" onclick="disappear()">OK</button>
+      </div>
+   </div>
+
+
     
       <div class="text-center text-white mt-5 title">
         <!-- <img src="thead.png.crdownload" class="head-image"/> -->
@@ -62,9 +73,9 @@
             <button type="button" onclick="search()" class="btn searchbtn"><i class="fa fa-search"></i></button>
            </div>
            <br>
-           <div class="error">
+           <!-- <div class="error">
 
-           </div>
+           </div> -->
           
           </div>
         </div>
